--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "serve -s /dist",
+    "start": "serve -s dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
